--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,26 @@
 bcrypt==3.2.0
+bidict==0.21.4
 certifi==2021.10.8
 cffi==1.15.0
 click==8.0.3
 cloudinary==1.28.0
 Flask==2.0.2
 Flask-Login==0.5.0
+Flask-SocketIO==5.1.1
+gevent==21.8.0
+gevent-websocket==0.10.1
+greenlet==1.1.2
 itsdangerous==2.0.1
 Jinja2==3.0.2
 MarkupSafe==2.0.1
 pycparser==2.21
 pymongo==3.12.1
 python-dotenv==0.19.2
+python-engineio==4.3.0
+python-socketio==5.5.0
 six==1.16.0
 urllib3==1.26.7
 Werkzeug==2.0.2
 yapf==0.31.0
+zope.event==4.5.0
+zope.interface==5.4.0
