--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ cffi==1.15.0
 click==8.0.3
 cloudinary==1.28.0
 Flask==2.0.2
-Flask-SocketIO==5.1.1
+Flask-SocketIO==5.1.1 #
 gevent==21.8.0
 gevent-websocket==0.10.1
 greenlet==1.1.2
@@ -13,8 +13,8 @@ itsdangerous==2.0.1
 Jinja2==3.0.2
 MarkupSafe==2.0.1
 pycparser==2.21
-pymongo==3.12.1
-python-dotenv==0.19.2
+pymongo==3.12.1 #
+python-dotenv==0.19.2 #
 python-engineio==4.3.0
 python-socketio==5.5.0
 six==1.16.0
